--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -357,11 +357,12 @@ body {
   min-width: 300px;
   max-height: calc(100% - 80px);
   user-select: none;
+  overflow: auto;
 }
 
 #player-help.active {
   opacity: 1;
-  z-index: 100;
+  z-index: 1000;
   transition: opacity 0.3s;
 }
 
@@ -382,6 +383,8 @@ body {
 
 #player-help .container-title .close {
   position: relative;
+  padding: 0;
+  right: -1.5em;
 }
 
 #player-help .container-title .close::before { 
